update: added TextInput UI component

--- a/package.json
+++ b/package.json
@@ -8,33 +8,28 @@
   },
   "license": "ISC",
   "author": "jason2000-cpu",
-  "type": "commonjs",
+  "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup",
+    "dev": "tsup --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "@tailwindcss/cli": "^4.2.0",
-    "install": "^0.13.0",
-    "npm": "^11.10.1"
-  },
   "peerDependencies": {
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
-    "styled-components": "^6.3.11"
+    "react": ">=18",
+    "react-dom": ">=18",
+    "styled-components": ">=6"
   },
   "devDependencies": {
-    "@types/node": "^25.3.0",
-    "@types/react": "^19.2.14",
-    "@types/react-dom": "^19.2.3",
-    "@types/styled-components": "^5.1.36",
-    "autoprefixer": "^10.4.24",
-    "clsx": "^2.1.1",
-    "postcss": "^8.5.6",
-    "tsup": "^8.5.1",
-    "typescript": "^5.9.3"
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "styled-components": "^6.3.11",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@types/styled-components": "^5",
+    "typescript": "^5.9.3",
+    "tsup": "^8.5.1"
   }
 }
